# harness-cua

./: .gitignore  CLAUDE.md  LICENSE  README.md  SKILL.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  pages.yml
agent-workspace/: agent_helpers.py
agent-workspace/app-skills/: README.md
agent-workspace/app-skills/com.apple.Notes/: helpers.py
agent-workspace/app-skills/com.apple.Terminal/: helpers.py
agent-workspace/app-skills/com.apple.finder/: helpers.py
agent-workspace/app-skills/com.googlecode.iterm2/: helpers.py
docs/: implementation-notes.md  index.html  install.md  macos-permissions.md  spec.md  tcc-permissions.md  technical-design.md
docs/internal/: SKILL.md  prd.md  product-design.md  technical-design.md  tsd.md
examples/: app_skills_lifecycle.py  basic_automation.py  claude_code_agent.py  langchain_tools.py  macro_recording.py  multi_app_workflow.py
src/cua_harness/: __init__.py  client.py  diff.py  dryrun.py  helpers.py  macro.py  profiler.py  run.py  session.py  wait.py
tests/: test_020_features.py  test_030_features.py  test_040_new_features.py  test_app_skills.py  test_helpers.py  test_integration.py
