[project]
name = "cua-harness"
version = "0.3.1"
description = "Agent-friendly Python SDK for cua-driver desktop automation"
requires-python = ">=3.11"
dependencies = []
license = {text = "MIT"}
readme = "README.md"
keywords = ["cua", "desktop-automation", "accessibility", "gui", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers"
]

[project.urls]
Homepage = "https://github.com/luw2007/harness-cua"
Repository = "https://github.com/luw2007/harness-cua"
Issues = "https://github.com/luw2007/harness-cua/issues"

[project.scripts]
cua-harness = "cua_harness.run:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
